--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.yy.kaitian.yiliao681">
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    package="com.yy.kaitian.yiliao681">
+
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -14,28 +16,49 @@
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
 
-        <activity android:configChanges="keyboardHidden|orientation" android:label="@string/app_name" android:name=".TDSMainActivity">
+        <activity
+            android:name=".TDSMainActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:configChanges="keyboardHidden|orientation" android:label="@string/select_device" android:name=".DeviceListActivity" android:theme="@android:style/Theme.Dialog"/>
-        <activity android:name=".WebViewActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar"/>
-        <activity android:name=".ImageViewActivity" android:screenOrientation="portrait"/>
-        <activity android:name="org.achartengine.GraphicalActivity"/>
-        <activity android:name=".LoginRemoteServerActivity"/>
-        <activity android:name=".CustomerProfilesEditActivity"/>
-        <activity android:name=".ProfilesListActivity"/>
-        <activity android:name=".ProfileDetailActivity"/>
-        <activity android:name=".DetectMainActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".PointDetectActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".DeviceManageActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".PointDatasPreferenceActivity"/>
-        <activity android:name=".CustomerListPreferenceActivity"/>
-        <activity android:name=".DeviceCheckActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".WriteSNActivity"/>
-        <service android:name="TDSService"/>
+        <activity
+            android:name=".DeviceListActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name=".WebViewActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name=".ImageViewActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name="org.achartengine.GraphicalActivity" />
+        <activity android:name=".LoginRemoteServerActivity" />
+        <activity android:name=".CustomerProfilesEditActivity" />
+        <activity android:name=".ProfilesListActivity" />
+        <activity android:name=".ProfileDetailActivity" />
+        <activity
+            android:name=".DetectMainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".PointDetectActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".DeviceManageActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".PointDatasPreferenceActivity" />
+        <activity android:name=".CustomerListPreferenceActivity" />
+        <activity
+            android:name=".DeviceCheckActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".WriteSNActivity" />
+
+        <service android:name="TDSService" />
     </application>
 
 </manifest>
