--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
@@ -29,11 +30,11 @@
             android:name="com.yy.kaitian.yl.DeviceListActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/select_device"
-            android:theme="@android:style/Theme.Dialog" />
+            android:theme="@style/CustomDialogTheme2" />
         <activity
             android:name="com.yy.kaitian.yl.WebViewActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" />
+            android:theme="@style/CustomTheme" />
         <activity
             android:name="com.yy.kaitian.yl.ImageViewActivity"
             android:screenOrientation="portrait" />
